# mosaica

./: .gitignore  README.md  file_processing.py  output.csv  pyproject.toml  v1.py
config/: constraints.yaml  optimisation.yaml  parameters.yaml  preprocessing_config.yaml  sets.yaml
docker/: Dockerfile  docker-compose.yml
docs/: contributing.md  getting_started.md
docs/architecture/: 00_ARCHITECTURE_OVERVIEW.md  01_PYTHON_MODULES.md  GAMA_VERSION.md  PROJECT_STRUCTURE.md
docs/project/: roadmap.md  todo.md
env/: gama_version.md
gaml-vscode/synthaxes/: gaml.tmLanguage.json
models/: main.gaml
scripts/: build.sh  run_gama.sh
src/: main.py  main_model.py  main_optimization.py  main_preprocessing.py  registry_app.py
src/1_preprocessing/: __init__.py  main.py  preprocessing_config.yaml
src/1_preprocessing/preprocessing/: __init__.py  data_cleaning.py  gis_loader.py  spatial_operations.py
src/2_maelia_pipeline/: __init__.py  maelia_pipeline_config.yaml  main.py
src/2_maelia_pipeline/gama_interface/: __init__.py  gama_runner.py
src/3_optimisation/: __init__.py  main.py
src/3_optimisation/optimization/: __init__.py  objectives.py  optimization_model.py  pymoo_solver.py
src/4_orchestration/: __init__.py  main.py  orchestration_config.yaml
src/4_orchestration/orchestration/: __init__.py  workflow.py
src/5_analysis_visualization/: __init__.py  analysis_visualization_config.yaml  main.py
src/5_analysis_visualization/analysis/: __init__.py  metrics.py
src/5_analysis_visualization/visualization/: __init__.py  plots.py
src/6_gama_multiagent/: __init__.py  gama_multiagent_config.yaml  main.py
src/6_gama_multiagent/gaml/: main.gaml
src/6_gama_multiagent/gaml/experiments/: optimization_experiment.gaml
src/6_gama_multiagent/gaml/parameters/: crops.gaml
src/model/: optimization.py  parameters.py  sets.py  solver.py  variables.py
src/model/constraints/: builder.py  constraints.py  revenu_constraints.py  revenue.py
src/optimization/: constraints.py  model.py  multiobjective.py  solve.py
src/preprocessing/: compute_parameters.py  config_loader.py  data_loader.py  dataset.py  dataset_builder.py  merge_datasets.py  merge_datasets.py.py
src/shared/: config_loader.py  paths.py
src/shared/config/: __init__.py  config.py  logging_config.py
src/shared/utils/: __init__.py  io_handlers.py  path_utils.py  paths.py  validators.py
tests/: conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_config.py  test_utils.py
