[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "mosaica"
version = "0.1.0"
description = "Multi-Objective Spatial Allocation of Integrated Crops and Agents"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "MOSAICA Team"}
]

dependencies = [
    # GIS & Spatial
    "geopandas>=0.12.0",
    "rasterio>=1.3.0",
    "shapely>=2.0.0",
    "pyproj>=3.4.0",
    "fiona>=1.9.0",
    
    # Data processing
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "xarray>=2023.0.0",
    
    # Optimization
    "pymoo>=0.6.0",
    "pyomo>=6.4.0",
    "scipy>=1.9.0",
    
    # Configuration & Logging
    "pyyaml>=6.0",
    "python-dotenv>=0.19.0",
    
    # Visualization
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "folium>=0.14.0",
    "streamlit>=1.18.0",
    
    # Testing
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    
    # Documentation
    "sphinx>=5.3.0",
    "sphinx-rtd-theme>=1.1.0",
    
    # Code quality
    "black>=22.10.0",
    "pylint>=2.15.0",
    "mypy>=0.990",
    "isort>=5.11.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.10.0",
    "pylint>=2.15.0",
    "mypy>=0.990",
    "isort>=5.11.0",
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]

docs = [
    "sphinx>=5.3.0",
    "sphinx-rtd-theme>=1.1.0",
    "sphinx-autodoc-typehints>=1.19.0",
]

[tool.setuptools]
packages = {find = {where = ["src"]}}

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
skip_glob = ["*/migrations/*"]

[tool.mypy]
python_version = "3.9"
check_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
